# torus-release

./: README.md  balances.json.sha256.txt  flake.nix  pyproject.toml
scripts/: extract_genesis_balances.py
