[tool.poetry]
name = "torus-release"
version = "0.1.0"
description = ""
authors = ["Renlabs <contact@renlabs.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

communex = "^0.1.36.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
